# ColorCamp

./: .gitignore  .pre-commit-config.yaml  .pylintrc  LICENSE  README.md  TODO.md  create_prehook.sh  lint.py  pyproject.toml  setup.py
.github/workflows/: python-package.yml
chroma/: __init__.py  __version__.py  color.py  config.py  conversions.py  project.py  scale.py
colorcamp/: __init__.py  __version__.py  _camp.py  _color_metadata.py  _report.py  _settings.py  camp.py  color.py  color_space.py  common_doc.py  config.py  conversions.py  map.py  palette.py  scale.py  types.py
colorcamp/color_objects/: __init__.py  _color_metadata.py  _map.py  _palette.py  _scale.py  color.py  color_space.py  map.py  palette.py  scale.py
colorcamp/color_space/: __init__.py  _base_color.py  _hex.py  _hsl.py  _rgb.py
colorcamp/common/: __init__.py  exceptions.py  types.py  validators.py
colorcamp/data/: carto.json  colorbrewer.json  crayons.json  seaborn.json  web_colors.json
colorcamp/data/carto/: camp_info.json
colorcamp/data/carto/palettes/: Agsunset.json  Antique.json  Blugrn.json  Bold.json  Brwnyl.json  Burgyl.json  Darkmint.json  Emrld.json  Mint.json  Peach.json  Pinkyl.json  Prism.json  Purp.json  Redor.json  Safe.json  Sunset.json  Teal.json
colorcamp/data/carto/scales/: Agsunset.json  Blugrn.json  Bluyl.json  Brwnyl.json  Earth.json  Fall.json  Redor.json  Sunset.json  Teal.json  Tealrose.json  Temps.json
colorcamp/data/colorbrewer/: camp_info.json
colorcamp/data/colorbrewer/palettes/: Accent.json  BuGn.json  BuPu.json  Dark2.json  OrRd.json  Oranges.json  Pastel2.json  PuBuGn.json  PuRd.json  RdPu.json  Set3.json  YlGn.json  YlOrBr.json  YlOrRd.json
colorcamp/data/colorbrewer/scales/: BrBG.json  BuGn.json  BuPu.json  Greens.json  Greys.json  Oranges.json  PRGn.json  PuOr.json  PuRd.json  RdBu.json  RdYlBu.json  Spectral.json
colorcamp/data/crayons/: camp_info.json
colorcamp/data/crayons/colors/: Almond.json  AntiqueBrass.json  Apricot.json  Aquamarine.json  Asparagus.json  AtomicTangerine.json  BananaMania.json  Beaver.json  Bittersweet.json  Blue.json  BlueBell.json  BlueGreen.json  BlueViolet.json  Blush.json  BrickRed.json  Brown.json  BurntOrange.json  BurntSienna.json  CadetBlue.json  Canary.json  CaribbeanGreen.json  CarnationPink.json  Cerise.json  (+95 more)
colorcamp/data/seaborn/: camp_info.json
colorcamp/data/web_colors/: camp_info.json
colorcamp/groups/: __init__.py  _color_group.py  _map.py  _palette.py  _scale.py
colorcamp/static/: html_templates.py  report.css
colorcamp/tests/: conftest.py  test_camp.py  test_color.py  test_color_group.py  test_color_metadata.py  test_conversions.py  test_map.py  test_palette.py  test_scale.py  test_validators.py
data/carto/palettes/: Aggrnyl.json  Bluyl.json  Burg.json  Magenta.json  Oryel.json  Pastel.json  Purpor.json  Sunsetdark.json  Tealgrn.json  Vivid.json
data/carto/scales/: Aggrnyl.json  Armyrose.json  Burg.json  Burgyl.json  Darkmint.json  Emrld.json  Geyser.json  Magenta.json  Mint.json  Oryel.json  Peach.json  Pinkyl.json  Purp.json  Purpor.json  Sunsetdark.json  Tealgrn.json  Tropic.json
data/colorbrewer/palettes/: Blues.json  GnBu.json  Greens.json  Greys.json  Paired.json  Pastel1.json  PuBu.json  Purples.json  Reds.json  YlGnBu.json
data/colorbrewer/scales/: Blues.json  GnBu.json  OrRd.json  PiYG.json  PuBu.json  PuBuGn.json  Purples.json  RdGy.json  RdPu.json  RdYlGn.json  Reds.json  YlGn.json  YlGnBu.json  YlOrBr.json  YlOrRd.json
data/seaborn/colors/: TabBlue.json  TabBrown.json  TabCyan.json  TabGreen.json  TabOlive.json  TabOrange.json  TabPurple.json  TabRed.json  b.json  g.json  k.json  m.json  w.json  y.json
data/seaborn/palettes/: gist_ncar.json  hsv.json  seaborn.json  seismic.json  tab20c.json
data/web_colors/colors/: AliceBlue.json  AntiqueWhite.json  Aqua.json  Aquamarine.json  Azure.json  Beige.json  Bisque.json  Black.json  BlanchedAlmond.json  Blue.json  BlueViolet.json  Brown.json  BurlyWood.json  CadetBlue.json  Chartreuse.json  Chocolate.json  Coral.json  CornflowerBlue.json  Cornsilk.json  Crimson.json  Cyan.json  DarkBlue.json  DarkCyan.json  DarkGoldenRod.json  DarkGray.json  DarkGreen.json  DarkKhaki.json  DarkMagenta.json  DarkOliveGreen.json  DarkOrange.json  DarkOrchid.json  DarkRed.json  DarkSalmon.json  DarkSeaGreen.json  DarkSlateBlue.json  DarkSlateGray.json  DarkTurquoise.json  DarkViolet.json  DeepPink.json  DeepSkyBlue.json  (+101 more)
examples/: ColorCamp_Example.ipynb  ExampleCamp.html  Ploting_Example.ipynb
src/: __init__.py  __version__.py  camp.py  color.py  common_doc.py  config.py  conversions.py  palette.py  scale.py
(+185 files in other folders)
